--- a/app.json
+++ b/app.json
@@ -1,14 +1,19 @@
 {
   "expo": {
-    "name": "body-calculator",
+    "name": "BodyCalc",
     "slug": "body-calculator",
-    "version": "1.0.0",
+    "privacy": "public",
+    "platforms": [
+      "ios",
+      "android"
+    ],
+    "version": "0.1.1",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/rn-icon.png",
     "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "image": "./assets/rn-splash.png",
+      "resizeMode": "cover",
+      "backgroundColor": "#242832"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -17,13 +22,18 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "ru.makarpustovalov.bodycalc",
+      "buildNumber": "0.1.1"
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/rn-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "ru.makarpustovalov.bodycalc",
+      "versionCode": "1",
+      "permissions": []
     },
     "web": {
       "favicon": "./assets/favicon.png"
