--- a/app.json
+++ b/app.json
@@ -32,7 +32,7 @@
         "backgroundColor": "#FFFFFF"
       },
       "package": "ru.makarpustovalov.bodycalc",
-      "versionCode": "1",
+      "versionCode": 1,
       "permissions": []
     },
     "web": {
